// <auto-generated>
// Generated by RemoteMvvmTool.
// </auto-generated>

syntax = "proto3";

package test_protos;

option csharp_namespace = "Test.Protos";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

// Message representing the full state of the TestViewModel
message TestViewModelState {
  repeated ThermalZoneComponentViewModelState zone_list = 1; // Original C#: System.Collections.ObjectModel.ObservableCollection<Generated.ViewModels.ThermalZoneComponentViewModel> ZoneList
}

message ThermalZoneComponentViewModelState {
  int32 zone = 1; // Original C#: HP.Telemetry.Zone Zone
  int32 temperature = 2; // Original C#: int Temperature
}

message UpdatePropertyValueRequest {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message PropertyChangeNotification {
  string property_name = 1;
  google.protobuf.Any new_value = 2;
}

message SubscribeRequest {
  string client_id = 1;
}

enum ConnectionStatus {
  UNKNOWN = 0;
  CONNECTED = 1;
  DISCONNECTED = 2;
}

message ConnectionStatusResponse {
  ConnectionStatus status = 1;
}

service TestViewModelService {
  rpc GetState (google.protobuf.Empty) returns (TestViewModelState);
  rpc UpdatePropertyValue (UpdatePropertyValueRequest) returns (google.protobuf.Empty);
  rpc SubscribeToPropertyChanges (SubscribeRequest) returns (stream PropertyChangeNotification);
  rpc Ping (google.protobuf.Empty) returns (ConnectionStatusResponse);
}

